add test playerData to dev view

--- a/http-server/views/collection.html
+++ b/http-server/views/collection.html
@@ -12,9 +12,7 @@
         </section>
     </div>
 	{% autoescape false %}
-	<script>
-		let playerData = {{ playerData }}
-	</script>
+	<script>let playerData = {{ playerData }}</script>
 	{% endautoescape %}
     <script src="/dist/build.js"></script>
 </body>
