--- a/http-server/views/collection.html
+++ b/http-server/views/collection.html
@@ -14,6 +14,7 @@
 	{% autoescape false %}
 	<script>let playerData = {{ playerData }}</script>
 	{% endautoescape %}
+    <script src="/tcgdata.js"></script>
     <script src="/dist/build.js"></script>
 </body>
 </html>
